--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -7,7 +7,10 @@
     </div>
     <div class="dates-n-passengers">
       <span class="dotted">{{ bookingInfo.roundTrip ? 'Two-way' : 'One-way' }}</span>
-      <span class="dotted">{{ bookingInfo.departureDate | date: 'dd MMM' }} - {{ bookingInfo.returnDate | date: 'dd MMM' }}</span>
+      <span class="dotted" *ngIf="bookingInfo.roundTrip; else oneWayDepartureDate">{{ bookingInfo.departureDate | date: 'dd MMM' }} - {{ bookingInfo.returnDate | date: 'dd MMM' }}</span>
+      <ng-template #oneWayDepartureDate>
+        <span class="dotted">{{ bookingInfo.departureDate | date: 'dd MMM' }}</span>
+      </ng-template>
       <div>
         <span> {{ getPassengersNumber() }} </span>
         <img src="/assets/passenger-icon.svg" alt="passengers">
@@ -33,7 +36,7 @@
     <mat-autocomplete #autoAirportDeparture="matAutocomplete">
       <mat-option
         *ngFor="let airport of airports | airportFilterPipe: departure; trackBy: trackByFn"
-        [value]="airport.city + ' ' + '(' + airport.airportCode + ')'"
+        [value]="airport.airportCode"
       >
         {{airport.city}} ({{airport.airportCode}})
       </mat-option>
@@ -50,14 +53,14 @@
     <mat-autocomplete #autoAirportDestination="matAutocomplete">
       <mat-option
         *ngFor="let airport of airports | airportFilterPipe: destination; trackBy: trackByFn"
-        [value]="airport.city + ' ' + '(' + airport.airportCode + ')'"
+        [value]="airport.airportCode"
       >
         {{airport.city}} ({{airport.airportCode}})
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill" *ngIf="bookingInfo?.roundTrip; else oneWayDatePicker">
     <mat-label>Dates</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
       <input matStartDate formControlName="departureDate" placeholder="Start date">
@@ -70,4 +73,13 @@
     <mat-error *ngIf="range.controls['destinationDate'].hasError('matEndDateInvalid')">Invalid end date</mat-error>
   </mat-form-field>
 
+  <ng-template #oneWayDatePicker [formGroup]="range">
+    <mat-form-field appearance="fill">
+      <mat-label>Date</mat-label>
+      <input matInput [matDatepicker]="oneWayPicker" formControlName="departureDate">
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="oneWayPicker"></mat-datepicker-toggle>
+      <mat-datepicker #oneWayPicker></mat-datepicker>
+    </mat-form-field>
+  </ng-template>
 </form>
